tests/regression/errors/basic/type_error_16.csd
// Type error test 16
sus number drip = 16
sus text tea = "string_16"
sus wrong drip = text  // Type mismatch
vibez.spill("Type error 16:", wrong)
